# browser-harness

./: README.md  SKILL.md  _compat.py  admin.py  check_toc.py  daemon.py  helpers.py  msimple.py  mtest10.py  mtest11.py  mtest12.py  mtest9.py  mtest_server.py  pyproject.toml  run.py  test_cdn.py  test_console.py  test_direct.js  test_http.py  test_mermaid.py  test_min_mermaid.html  test_probe.py  test_probe2.py  test_probe3.py  test_probe4.py  test_probe5.py  test_probe6.py  test_render.py  test_server.py  test_toc.py  test_version.py
.claude/hooks/state/: compaction_marker_console_979b4813-ac56-4a40-8a8a-b62c3cf1a422.json  compaction_marker_console_f2d81ae7-c814-4255-bf6d-930e8f5a616e.json  restore_smoke_console_6f6ccf72-9be1-44b9-95f8-2b8d0a995a5d.json
.claude/state/handoff/: console_48945474-7bd1-4ab7-af73-c5f6882cbe9c_20260422T153921_handoff.json  console_67e69a0a-4f26-4451-b8e1-c2354e1e0338_20260421T210951_handoff.json  console_67e69a0a-4f26-4451-b8e1-c2354e1e0338_20260421T230550_handoff.json  console_6f6ccf72-9be1-44b9-95f8-2b8d0a995a5d_20260506T203007_handoff.json  console_979b4813-ac56-4a40-8a8a-b62c3cf1a422_20260501T013634_handoff.json  console_979b4813-ac56-4a40-8a8a-b62c3cf1a422_20260501T013634_handoff.summary.md  (+18 more)
_snapshots/: browser_checks_debug.py
domain-skills/tiktok/: upload.md
interaction-skills/: connection.md  permissions.md
tests/: test__compat.py  test_admin.py  test_check_toc.py  test_daemon.py  test_helpers.py  test_msimple.py  test_mtest10.py  test_mtest11.py  test_mtest12.py  test_mtest9.py  test_mtest_server.py  test_run.py
(+7 files in other folders)
